Bug 1307754 - Set default device index properly on first enumeration. r=padenot a=jcristau

MozReview-Commit-ID: B1Sk3W7v5WC